feat: 课程管理相关的改动

--- a/course-online-ui/course-online-ui-admin/public/index.html
+++ b/course-online-ui/course-online-ui-admin/public/index.html
@@ -61,6 +61,10 @@
     <script src="<%= BASE_URL %>ace/assets/js/ace.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+
+    <!--  h5缓存  -->
+    <script src="<%= BASE_URL %>static/js/session-storage.js"></script>
+    <script src="<%= BASE_URL %>static/js/local-storage.js"></script>
   </head>
   <body>
     <noscript>
