feat: 课程分类关联管理

--- a/course-online-ui/course-online-ui-admin/public/index.html
+++ b/course-online-ui/course-online-ui-admin/public/index.html
@@ -65,6 +65,9 @@
     <!--  h5缓存  -->
     <script src="<%= BASE_URL %>static/js/session-storage.js"></script>
     <script src="<%= BASE_URL %>static/js/local-storage.js"></script>
+
+    <!--  通用工具类  -->
+    <script src="<%= BASE_URL %>static/js/tool.js"></script>
   </head>
   <body>
     <noscript>
