--- a/course-online-ui/course-online-ui-admin/public/index.html
+++ b/course-online-ui/course-online-ui-admin/public/index.html
@@ -68,6 +68,10 @@
 
     <!--  通用工具类  -->
     <script src="<%= BASE_URL %>static/js/tool.js"></script>
+    <!-- include summernote css/js -->
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+    <script src="<%= BASE_URL %>static/lang/summernote-zh-CN.min.js"></script>
   </head>
   <body>
     <noscript>
