--- a/course-online-ui/course-online-ui-admin/public/index.html
+++ b/course-online-ui/course-online-ui-admin/public/index.html
@@ -68,6 +68,7 @@
 
     <!--  通用工具类  -->
     <script src="<%= BASE_URL %>static/js/tool.js"></script>
+    <script src="<%= BASE_URL %>static/js/md5.js"></script>
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
