--- a/course-online-ui/course-online-ui-web/public/index.html
+++ b/course-online-ui/course-online-ui-web/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="<%= BASE_URL %>bootstrap-4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="<%= BASE_URL %>static/css/album.css">
     <link rel="stylesheet" href="<%= BASE_URL %>static/css/style.css">
-
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="<%= BASE_URL %>bootstrap-4.4.1/js/bootstrap.bundle.min.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
