feat: 前台数据展示前后端

--- a/course-online-ui/website/public/index.html
+++ b/course-online-ui/website/public/index.html
@@ -13,6 +13,13 @@
     <script src="<%= BASE_URL %>bootstrap-4.4.1/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.9.3/skins/default/aliplayer-min.css" />
     <script charset="utf-8" type="text/javascript" src="https://g.alicdn.com/de/prismplayer/2.9.3/aliplayer-min.js"></script>
+
+    <!--  h5缓存  -->
+    <script src="<%= BASE_URL %>static/js/session-storage.js"></script>
+    <script src="<%= BASE_URL %>static/js/local-storage.js"></script>
+
+    <!--  通用工具类  -->
+    <script src="<%= BASE_URL %>static/js/tool.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
