--- a/course-online-ui/website/public/index.html
+++ b/course-online-ui/website/public/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="<%= BASE_URL %>bootstrap-4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="<%= BASE_URL %>static/css/album.css">
-    <link rel="stylesheet" href="<%= BASE_URL %>static/css/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="bootstrap-4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/album.css">
+    <link rel="stylesheet" href="static/css/style.css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="<%= BASE_URL %>bootstrap-4.4.1/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.9.3/skins/default/aliplayer-min.css" />
-    <script charset="utf-8" type="text/javascript" src="https://g.alicdn.com/de/prismplayer/2.9.3/aliplayer-min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+    <script src="bootstrap-4.4.1/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.9.3/skins/default/aliplayer-min.css"/>
+    <script charset="utf-8" type="text/javascript"
+            src="https://g.alicdn.com/de/prismplayer/2.9.3/aliplayer-min.js"></script>
 
     <!--  h5缓存  -->
-    <script src="<%= BASE_URL %>static/js/session-storage.js"></script>
-    <script src="<%= BASE_URL %>static/js/local-storage.js"></script>
+    <script src="static/js/session-storage.js"></script>
+    <script src="static/js/local-storage.js"></script>
 
     <!--  通用工具类  -->
-    <script src="<%= BASE_URL %>static/js/tool.js"></script>
+    <script src="static/js/tool.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+</head>
+<body>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
